# alogorythms

./: algorythms.sublime-workspace  pyproject.toml
algorythms/search_and_sort/: bubble.py  merge.py  shell.py
algorythms/search_and_sort/search/: binary.py  interpolation.py  linear.py
algorythms/search_and_sort/sort/: insertion.py  selection.py
tests/: test_algorythms.py
