[tool.poetry]
name = "algorythms"
version = "0.1.0"
description = ""
authors = ["Your Name <milos.grujic@massaw.pro>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
